--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "firebase": "^6.4.0",
     "material-icons": "^0.3.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuefire": "^2.1.2",
     "vuetify": "^2.0.4"
   },
   "devDependencies": {
