--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "firebase": "^6.4.2",
+    "firebase": "^6.5.0",
     "material-icons": "^0.3.1",
     "toastr": "^2.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuefire": "^2.1.2",
+    "vuefire": "^2.2.0-alpha.0",
     "vuetify": "^2.0.4"
   },
   "devDependencies": {
