--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@firebase/app": "^0.4.15",
+    "@firebase/firestore": "^1.5.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "firebase": "^6.5.0",
     "material-icons": "^0.3.1",
     "toastr": "^2.1.4",
     "vue": "^2.6.10",
+    "vue-firestore": "^0.3.22",
     "vue-router": "^3.0.3",
     "vuefire": "^2.2.0-alpha.0",
     "vuetify": "^2.0.4"
