--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^2.6.5",
     "firebase": "^6.5.0",
     "material-icons": "^0.3.1",
+    "moment": "^2.24.0",
+    "pikaday": "^1.8.0",
     "toastr": "^2.1.4",
     "vue": "^2.6.10",
     "vue-firestore": "^0.3.22",
@@ -22,6 +24,7 @@
     "vuetify": "^2.0.4"
   },
   "devDependencies": {
+    "@enrian/vue-pikaday": "^1.0.4",
     "@mdi/font": "^3.9.95",
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
