--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-icons": "^0.3.1",
     "moment": "^2.24.0",
     "pikaday": "^1.8.0",
+    "style-resources-loader": "^1.3.3",
     "toastr": "^2.1.4",
     "vue": "^2.6.10",
     "vue-firestore": "^0.3.22",
